# My-first-cpp-program

./: CMakeLists.txt  CMakePresets.json  README.md  projekt.cpp  projekt.h  vcpkg.json
